--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -66,7 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-    <Content Include="Masterpage.Master" />
+    <Content Include="index.html" />
     <Content Include="IISExpress\config\applicationhost.config" />
     <Content Include="IISExpress\config\aspnet.config" />
     <Content Include="IISExpress\config\redirection.config" />
@@ -96,11 +96,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Masterpage.Master.cs">
-      <DependentUpon>Masterpage.Master</DependentUpon>
+      <DependentUpon>index.html</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Masterpage.Master.designer.cs">
-      <DependentUpon>Masterpage.Master</DependentUpon>
+      <DependentUpon>index.html</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebForm.aspx.cs">
